k8s/test-nginx/app-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: nginx-ingress
spec:
  rules:
  - host: anle.test
    http:
      paths:
      - path: /
        backend:
          serviceName: http-test-svc
          servicePort: 80
